--- a/src/static/admin/pages/youtube.html
+++ b/src/static/admin/pages/youtube.html
@@ -14,6 +14,8 @@
     <link href="/admin/css/AdminLTE.css" rel="stylesheet" type="text/css"/>
     <!-- text box style -->
     <link href="/admin/css/addVideos.css" rel="stylesheet" type="text/css"/>
+    <!-- warning box -->
+    <link href="/admin/css/jquery-confirm.min.css" rel="stylesheet" type="text/css"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -287,6 +289,8 @@
 <script src="/admin/js/admin.js" type="text/javascript"></script>
 <script src="/admin/js/profile.js" type="text/javascript"></script>
 <script src="/admin/js/addVideos.js" type="text/javascript"></script>
+<script src="/admin/js/jquery-confirm.min.js" type="text/javascript"></script>
+
 
 </body>
 </html>
