--- a/src/static/admin/changes.html
+++ b/src/static/admin/changes.html
@@ -238,76 +238,60 @@
             <div class="alert alert-warning alert-dismissable hide error_box">
                 <i class="fa fa-warning"></i>
                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                <b>Error!</b> <span class="error_message"></span>.
+                <b>Warning!</b> <span class="error_message"></span>.
+            </div>
+            <div class="alert alert-success alert-dismissable hide success_box ">
+                <span>The Changes Have Been Successfully Made</span>.
             </div>
             <div class="row">
                 <div class="col-xs-12">
                     <div class="box">
                         <div class="box-body table-responsive no-padding">
-                            <table id="dropbox-table" class="table table-hover">
+                            <table id="changes-table" class="table table-hover">
                                 <tr>
                                     <th>Location</th>
                                     <td>
-                                        <a href="#" id="popover_location"></a>
-
-                                        <div id="pop_location-content" class="hide">
-                                            <form>
-                                                <div class="body">
-                                                    <div class="form-group">
-                                                        <input type="text" id="new_location"
-                                                               class="form-control"
-                                                               placeholder="New Location"/>
-                                                    </div>
-                                                    <div class="footer">
-                                                        <button id="location_btn" type="submit"
-                                                                class="btn bg-blue btn-block" onclick='sendTo("new_location")' >Change Location
-                                                        </button>
-                                                    </div>
-                                                </div>
-                                            </form>
+                                        <div class="input-group">
+                                            <input type="text" size="80" class="form-control" aria-describedby="basic-addon1" id="location">
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th>Location Description</th>
                                     <td>
-                                        <a href="#" id="popover_location_description"></a>
-
-                                        <div id="pop_location_description-content" class="hide">
-                                            <form>
-                                                <div class="body">
-                                                    <div class="form-group">
-                                                        <input type="text" id="new_location_description"
-                                                               class="form-control"
-                                                               placeholder="New Location Description"/>
-                                                    </div>
-                                                    <div class="footer">
-                                                        <button id="location_description_btn" type="submit"
-                                                                class="btn bg-blue btn-block" onclick='sendTo("new_location_description")'>Change Location
-                                                            Description
-                                                        </button>
-                                                    </div>
-                                                </div>
-                                            </form>
+                                        <div class="input-group ">
+                                            <input type="text" size="80" class="form-control" aria-describedby="basic-addon1" id="location_description">
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th>Background</th>
                                     <td>
-                                        <a href="#" id="popover_background"></a>
-                                        <input type="file" id="new_background">
-                                        <button id="background_btn" type="submit"
-                                                                class="btn-sm bg-blue" onclick='sendTo("new_background")'>Change Background
-                                        </button>
+                                        <div class="input-group">
+                                            <input type="text" size="80" class="form-control" aria-describedby="basic-addon1" id="background">
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Weather Location</th>
+                                    <td>
+                                        <div class="input-group" >
+                                            <input  type="text" size="80" class="form-control" aria-describedby="basic-addon1" id="weather">
+                                        </div>
                                     </td>
                                 </tr>
                             </table>
+                            <div>
+                                    <button id="save_btn" type="submit"
+                                            class="btn-lg bg-blue btn-block">Save Changes
+                                    </button>
+                            </div>
                         </div>
                         <!-- /.box-body -->
                     </div>
                     <!-- /.box -->
                 </div>
+                
             </div>
         </section>
         <!-- /.content -->
@@ -324,6 +308,8 @@
 <!-- AdminLTE App -->
 <script src="/admin/js/AdminLTE/app.js" type="text/javascript"></script>
 <!-- Mine -->
+<script src="/admin/js/admin.js" type="text/javascript"></script>
+
 <script src="/admin/js/changes.js" type="text/javascript"></script>
 
 </body>
