--- a/src/static/admin/index.html
+++ b/src/static/admin/index.html
@@ -180,9 +180,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="pages/youtube.html">
+                    <a href="admin/pages/youtube.html">
                         <i class="fa fa-youtube"></i> <span>YouTube</span>
-                        <small class="badge pull-right bg-yellow">12</small>
                     </a>
                 </li>
                 <li class="treeview">
