--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,16 +3,17 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title> Index </title>
-		<link rel ="stylesheet" href="/css/bootstrap.min.css">
-		<link rel ="stylesheet" href="/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="/css/index.css">
 	</head>
 
 
 	<body>
-		<div style="width: 100%;" class="container">
+		<div class="container container_body">
 
 			<div class="row">
-				<div style="min-height: 150px; background-image: url('img/img/wild_flowers.png'); background-size: auto auto;" class="col-lg-12" align="center">
+				<div style="background-image: url('img/img/wild_flowers.png'); background-size: auto auto;" class="col-lg-12" align="center">
 					<br><br><br>
 						<div class="row">
 							<div class="col-lg-12" align="center" style="background-color: white; min-height: 100px; width: 100%;">
@@ -49,7 +50,7 @@
 			</div>
 
 			<div class="row">
-				<div style="height: 1500px;" id="content" class="col-lg-9" align="center">
+				<div id="content" class="col-lg-9" align="center">
 					<!-- aqui vai o conteudo -->
 				</div>
 
