--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title> Index </title>
+		<title> RaspiTV </title>
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="/css/index.css">
@@ -14,15 +14,14 @@
 
 			<div class="row">
 				<div style="background-image: url('img/img/wild_flowers.png'); background-size: auto auto;" class="col-lg-12" align="center">
-					<br><br><br>
+
 						<div class="row">
-							<div class="col-lg-12" align="center" style="background-color: white; min-height: 100px; width: 100%;">
-								<br>
+							<div class="col-lg-12" align="center" style="min-height: 100px; width: 100%;">
 								<img src="img/img/logo.png" align="right" width="10%">
 
-								<p id="date_time" style="color: #33B3D1;" align="right"></p>
-								<h2 style="color: #33B3D1;" align="left" id="location">DETI</h2>
-								<h4 style="color: #33B3D1;" align="left" id="location_description">Departamento de Eletrónica, Telecomunicações e Informática</h4>
+								<strong><h2 style="color: white;" align="left" id="location">DETI</h2>
+								<h4 style="color: white;" align="left" id="location_description">Departamento de Eletrónica, Telecomunicações e Informática</h4></strong>
+								<p id="date_time" style="color: white;" align="left"></p>
 
 								<script>
 
@@ -41,63 +40,58 @@
 
 								</script>
 
-								<br>
-
 							</div>
 						</div>
-					<br><br><br>
+
 				</div>
 			</div>
 
 			<div class="row">
-				<div id="content" class="col-lg-9" align="center">
-					<!-- aqui vai o conteudo -->
+				<div class="col-lg-9" id="content_div" align="center">
+					<iframe src="news.html" id="content_frame" frameborder="0" scrolling="no"></iframe>
 				</div>
 
-				<div style="min-height: 300px;" class="col-lg-3" id="weather" align="center">
-					Here <br>
-					comes <br>
-					the <br>
-					whether <br>
+				<div class="col-lg-3" id="right_bar" align="center">
+					<div style="weight:100%;  padding:5px" id="weather" align="center">
+						Here <br>
+						comes <br>
+						the <br>
+						whether <br>
+					</div>
+					<div style="weight:100%;  padding:5px" align="center" id="hum">
+					hum
 
-				</div>
+					</div>
+					<div style="weight:100%;  padding:5px" align="center" id="temp">
+					temp
 
+					</div>
+					<div style="weight:100%;  padding:5px" align="center" id="wind">
+					wind
 
-				<div style="min-height: 90px;" class="col-lg-3" align="center" id="hum">
-				hum
+					</div>
 
-				</div>
+					<div style="weight:100%;  padding:5px" align="center" id="sunrise">
+					sunrise
 
-				<div style="min-height: 90px;" class="col-lg-3" align="center" id="temp">
-				temp
+					</div>
 
-				</div>
+					<div style="weight:100%; padding: 5px" align="center" id="sunset">
+					sunset
 
-				<div style="min-height: 90px;" class="col-lg-3" align="center" id="wind">
-				wind
-
-				</div>
-
-				<div style="min-height: 90px;" class="col-lg-3" align="center" id="sunrise">
-				sunrise
-
-				</div>
-
-				<div style="min-height: 90px;" class="col-lg-3" align="center" id="sunset">
-				sunset
-
-				</div>
+					</div>
 
 
-				<div style="min-height: 200px;" class="col-lg-3 bg-warning" align="center">
-					<span style="position:absolute; bottom:0; left:10%;"> 
-						<img width="120px" src="QR/fb.png">
-						<img align="right" width="120px" src="QR/ua.png">
-					</span>
+					<div style="weight:100%; padding: 5px; padding-bottom: 0px" align="center">
+						<span style="bottom:0; left:10%;">
+							<img width="120px" src="QR/fb.png">
+							<img align="right" width="120px" src="QR/ua.png">
+						</span>
+					</div>
+
 				</div>
 
 			</div>
-			<br>
 			<div class="row">
 				<div style="min-height: 50px;" class="col-lg-12 bg-danger" align="center">
 					Tweets
