--- a/src/static/admin/changes.html
+++ b/src/static/admin/changes.html
@@ -280,6 +280,14 @@
                                         </div>
                                     </td>
                                 </tr>
+                                <tr>
+                                    <th>Feed Source</th>
+                                    <td>
+                                        <div class="input-group" >
+                                            <input  type="text" size="80" class="form-control" aria-describedby="basic-addon1" id="feed">
+                                        </div>
+                                    </td>
+                                </tr>
                             </table>
                             <div>
                                     <button id="save_btn" type="submit"
