--- a/src/static/index.html
+++ b/src/static/index.html
@@ -19,9 +19,9 @@
 							<div class="col-lg-12" align="center" style="min-height: 100px; width: 100%;">
 								<img src="img/img/logo.png" align="right" width="10%">
 
-								<strong><h2 style="color: white;" align="left" id="location">DETI</h2>
-								<h4 style="color: white;" align="left" id="location_description">Departamento de Eletrónica, Telecomunicações e Informática</h4></strong>
-								<p id="date_time" style="color: white;" align="left"></p>
+								<strong><h1 style="color: white;" align="left" id="location">DETI</h1>
+								<h2 style="color: white;" align="left" id="location_description">Departamento de Eletrónica, Telecomunicações e Informática</h2></strong>
+								<h3 id="date_time" style="color: white;" align="left"></h3>
 
 								<script>
 
@@ -52,40 +52,40 @@
 				</div>
 
 				<div class="col-lg-3" id="right_bar" align="center">
-					<div style="weight:100%;  padding:5px" id="weather" align="center">
+					<div style="weight:100%;  padding:2%" id="weather" align="center">
 
 					</div>
-					<div style="weight:100%;  padding:5px" align="center" id="hum">
+					<div style="weight:100%;  padding:2%" align="center" id="hum">
 
 					</div>
-					<div style="weight:100%;  padding:5px" align="center" id="temp">
+					<div style="weight:100%;  padding:2%" align="center" id="temp">
 
 					</div>
-					<div style="weight:100%;  padding:5px" align="center" id="wind">
-
-					</div>
-
-					<div style="weight:100%;  padding:5px" align="center" id="sunrise">
+					<div style="weight:100%;  padding:2%" align="center" id="wind">
 
 					</div>
 
-					<div style="weight:100%; padding: 5px" align="center" id="sunset">
+					<div style="weight:100%;  padding:2%" align="center" id="sunrise">
 
 					</div>
 
+					<div style="weight:100%; padding: 2%" align="center" id="sunset">
 
-					<div style="weight:100%; padding: 5px; padding-bottom: 0px" align="center">
-						<span style="bottom:0; left:10%;">
+					</div>
+
+					<div style="weight:100%; padding: 2%; padding-bottom: 0px" align="center">
+						<span style="bottom:0;">
 							<img width="120px" src="QR/fb.png">
-							<img align="right" width="120px" src="QR/ua.png">
+							<img width="120px" src="QR/ua.png">
 						</span>
 					</div>
 
 				</div>
 
 			</div>
-			<div class="row">
-				<div style="min-height: 50px;" class="col-lg-12 bg-danger" align="center">
+
+			<div class="row footer">
+				<div class="col-lg-12 bg-danger" style="height: 100%" align="center">
 					Tweets
 				</div>
 			</div>
