--- a/src/static/admin/pages/accounts/register-dropbox.html
+++ b/src/static/admin/pages/accounts/register-dropbox.html
@@ -22,24 +22,10 @@
 
 <div class="form-box" id="login-box">
     <div class="header">Register New Account</div>
-    <form action="../../index.html" method="post">
-        <div class="body bg-gray">
-            <div class="form-group">
-                <input id="account" type="text" name="name" class="form-control" placeholder="Account ID"/>
-            </div>
-            <div class="form-group">
-                <input id="token" type="password" name="userid" class="form-control"
-                       placeholder="Authentication Token"/>
-            </div>
-            <div class="form-group">
-                <input id="note" type="text" name="password" class="form-control" placeholder="Note"/>
-            </div>
-        </div>
-        <div class="footer">
-
-            <button id="add-btn" type="button" class="btn bg-olive btn-block">Add new account</button>
-
-            <a href="accounts.html#dropbox" class="text-center">Take me back</a>
+    <form action="#" method="post">
+        <div class="footer request">
+            <button id="request-btn" type="button" class="btn bg-olive btn-block">Request Authentication Token</button>
+            <a href="accounts.html#twitter" class="text-center">Take me back</a>
         </div>
     </form>
 
@@ -54,17 +40,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <!-- Bootstrap -->
 <script src="../../js/bootstrap.min.js" type="text/javascript"></script>
-<!-- Mine -->
-<script type="text/javascript">
-    $('#add-btn').click(function () {
-        var account = $('#account').val();
-        var token = $('#token').val();
-        var note = $('#note').val();
-        if(!account.length) $('#return').html('Account ID can\'t be empty.');
-        else $.post('/admin/create/dropbox', {'account': account, 'token': token, 'note': note}, function (data) {
-            $('#return').html(data);
-        });
-    });
-</script>
+<script src="/admin/js/admin.js" type="text/javascript"></script>
+<script src="create_dropbox.js" type="text/javascript"></script>
 </body>
 </html>
