--- a/src/static/index.html
+++ b/src/static/index.html
@@ -85,7 +85,7 @@
 			</div>
 
 			<div class="row footer">
-				<div class="col-lg-12 bg-danger" style="height: 100%" align="center">
+				<div class="col-lg-12" style="height: 100%" align="center">
 					<span id="tweets-table">
 
 					</span>
