--- a/src/static/admin/pages/tables/order-front-end.html
+++ b/src/static/admin/pages/tables/order-front-end.html
@@ -421,7 +421,7 @@
 
 
         <!-- jQuery 2.0.2 -->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+        <script src="/admin/js/jquery.min.js"></script>
         <!-- Bootstrap -->
         <script src="/admin/js/bootstrap.min.js" type="text/javascript"></script>
         <!-- AdminLTE App -->
